[package]
name = "luminal-router"
version = "0.0.12"
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]
description = "Minimalist router for hyper.rs"
homepage = "http://github.com/commandline/luminal/router"
repository = "http://github.com/commandline/luminal"
readme = "README.md"
keywords = ["web", "router"]
categories = ["web-programming"]
license = "Apache-2.0"

[dependencies]
error-chain = "0.11"
futures = "0.1"
http = { version = "0.1", optional = true }
hyper = { version = "0.11", features = ["compat"] }
luminal-handler = { version = "0.0", optional = true }

[dev-dependencies]
tokio-core = "0.1"
time = "0.1"

[features]
handler = ["http", "luminal-handler"]
